frontend/src/components/Hero/hero.scss
@use '../../scss/abstracts' as *;
@use '../../scss/layout/spacing' as *;
@use '../../scss/layout/container' as *;

.hero {
	header {
		.banner-image {
			@include breakpoint-min(md) {
				height: 556px;
			}
			@include breakpoint-max(lg) {
				margin-bottom: em(24);
			}
			@include breakpoint-inBetween(md, lg) {
				margin-bottom: em(57);
			}
		}

		.display-1 {
			font-size: $h4-font-size;
			font-family: $font-heading;
			margin-bottom: $banner-spacer;
			@extend %multi-line-truncate;

			@include breakpoint-min(md) {
				font-size: $h1-font-size;
			}
		}

		.time-wrapper {
			span {
				@include breakpoint-min(xl) {
					display: block;
				}
			}
		}

		.time-wrapper,
		.venue-wrapper,
		.location-wrapper {
			margin-bottom: $banner-spacer;

			@include breakpoint-inBetween(md, lg) {
				margin-bottom: 0px;
			}
		}

		.venue-wrapper {
			p:not(.venue-caption) {
				@extend %multi-line-truncate;
			}
		}

		.btn-hero {
			@include breakpoint-inBetween(md, lg) {
				width: 50%;
				margin-top: rem(30);
			}
			@include breakpoint-inBetween(lg, xl) {
				margin-top: auto;
			}
		}

		.navigation-buttons {
			margin-top: em(28);
			position: relative;
			z-index: 2;

			@include breakpoint-inBetween(md, lg) {
				margin-top: em(-49);
				justify-content: flex-start;
			}
			@include breakpoint-min(xl) {
				margin-top: em(-39);
			}
		}
	}
}

